discussion/kv_engine/124617/124617_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-37280: Benchmark flush at flusher-deduplication

Change-Id: Idab4e43845ecc5689b1cdec7e1f0836ee2b9b5ea

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2020-03-31 16:11:39.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-03-31 16:35:03.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27208/ : FAILURE

Compile error at ..\kv_engine\engines\ep\benchmarks\vbucket_bench.cc(621): error C2059: syntax error: ";" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27208/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23268/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:621:63:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23268/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1451/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:621:63: error: expected unqualified-id [clang-diagnostic-error]
    state.counters["TotalPersisted"] = engine->getKVBucket()->;
                                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:658:1: error: unknown type name "MemTrackingVBucketBench_FlushVBucket_MultipleRanges_Insert_Benchmark"; did you mean "MemTrackingVBucketBench_FlusherDedup_MultipleRanges_Benchmark"? [clang-diagnostic-error]
BENCHMARK_REGISTER_F(MemTrackingVBucketBench,
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/benchmark/include/benchmark/benchmark_api.h:895:32: note: expanded from macro "BENCHMARK_REGISTER_F"
  BENCHMARK_PRIVATE_REGISTER_F(BaseClass##_##Method##_Benchmark)
                               ^
note: expanded from here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:506:1: note: "MemTrackingVBucketBench_FlusherDedup_MultipleRanges_Benchmark" declared here
BENCHMARK_DEFINE_F(MemTrackingVBucketBench, FlusherDedup_MultipleRanges)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/benchmark/include/benchmark/benchmark_api.h:891:3: note: expanded from macro "BENCHMARK_DEFINE_F"
  BENCHMARK_PRIVATE_DECLARE_F(BaseClass, Method) \
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/benchmark/include/benchmark/benchmark_api.h:880:9: note: expanded from macro "BENCHMARK_PRIVATE_DECLARE_F"
  class BaseClass##_##Method##_Benchmark : public BaseClass { \
        ^
note: expanded from here

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1451/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/benchmarks/vbucket_bench.cc:621:63:
error: expected unqualified-id [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1451/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2851/ : FAILURE

Compile error at [2020-03-31T16:22:55.404Z] ../kv_engine/engines/ep/benchmarks/vbucket_bench.cc:621:63:
error: expected unqualified-id before ?;? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2851/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2899/ : FAILURE

Compile error at [2020-03-31T16:24:51.268Z] ../kv_engine/engines/ep/benchmarks/vbucket_bench.cc:621:63:
error: expected unqualified-id before ?;? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2899/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2847/ : FAILURE

Compile error at [2020-03-31T16:25:26.245Z] ../kv_engine/engines/ep/benchmarks/vbucket_bench.cc:621:63:
error: expected unqualified-id before ?;? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2847/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1899/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10706/ : FAILURE

Compile error at [2020-03-31T16:28:26.565Z] ../kv_engine/engines/ep/benchmarks/vbucket_bench.cc:621:63:
error: expected unqualified-id before ?;? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10706/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/25571/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
